# snake

./: README.md  pyproject.toml
src/snake/: __init__.py  config.py  constants.py  game.py  game_state.py  sprites.py  ui.py
