[project]
name = "snake"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "James Tyson", email = "jamestyson@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[tool.pdm]
distribution = false


[dependency-groups]
dev = ["pylint>=3.3.1", "flake8>=7.1.1"]
