[project]
name = "snake"
version = "0.1.0"
description = "Classic Snake game with additional features."
authors = [
    {name = "James Tyson", email = "jamestyson@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[tool.pdm]
distribution = false


[tool.pylint]
max-line-length = 88


[dependency-groups]
dev = ["pylint>=3.3.1", "flake8>=7.1.1", "flake8-docstrings>=1.7.0"]
